feat: RacingGame 애그리거트 구현
- GameResult 내부 static class
- MovePolicySupplier