@@ -1,34 +1,43 @@
 package racingcar.domain.model;
 
 import racingcar.domain.policy.MovePolicy;
+import racingcar.domain.vo.Name;
 import racingcar.domain.vo.TryCount;
-import racingcar.exception.domain.InvalidDomainException;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
-import static racingcar.exception.message.ErrorMessage.INVALID_ROUND_NUMBER;
+import java.util.Objects;
 
 public class RacingGame {
     private final Cars initialCars;
     private final TryCount totalTryCount;
     private final List<Cars> history;
 
-    public RacingGame(List<Name> carNames, TryCount tryCount) {
-        this.initialCars = Cars.from(carNames);
-        this.totalTryCount = tryCount;
+    private RacingGame(Cars initialCars, TryCount totalTryCount) {
+        this.initialCars = Objects.requireNonNull(initialCars);
+        this.totalTryCount = Objects.requireNonNull(totalTryCount);
         this.history = new ArrayList<>();
     }
 
-    public GameResult play(MovePolicySupplier movePolicySupplier) {
-        Cars currentCars = initialCars;
+    public static RacingGame of(List<Name> carNames, TryCount tryCount) {
+        Cars cars = Cars.from(carNames);
+        return new RacingGame(cars, tryCount);
+    }
 
-        for (int round = 0; round < totalTryCount.getValue(); round++) {
+    public GameResult play(MovePolicySupplier movePolicySupplier) {
+        Objects.requireNonNull(movePolicySupplier);
+
+        Cars currentCars = initialCars;
+        TryCount count = totalTryCount;
+
+        while (count.hasRemaining()) {
             List<MovePolicy> movePolicies = movePolicySupplier.supply(currentCars.size());
             currentCars = currentCars.moveAll(movePolicies);
             history.add(currentCars);
+
+            count = count.decrease();
         }
 
-        return new GameResult(Collections.unmodifiableList(history), currentCars.findWinners());
+        return new GameResult(List.copyOf(history), currentCars.getWinnerNames());
     }
 
     @FunctionalInterface
@@ -38,30 +47,19 @@ public class RacingGame {
 
     public static final class GameResult {
         private final List<Cars> roundHistory;
-        private final List<Car> winners;
+        private final List<String> winnerNames;
 
-        private GameResult(List<Cars> roundHistory, List<Car> winners) {
+        private GameResult(List<Cars> roundHistory, List<String> winnerNames) {
             this.roundHistory = roundHistory;
-            this.winners = winners;
+            this.winnerNames = winnerNames;
         }
 
         public List<Cars> getRoundHistory() {
             return roundHistory;
         }
 
-        public List<Car> getWinners() {
-            return winners;
-        }
-
-        public Cars getRound(int roundNumber) {
-            if (roundNumber < 1 || roundNumber > roundHistory.size()) {
-                throw new InvalidDomainException(INVALID_ROUND_NUMBER);
-            }
-            return roundHistory.get(roundNumber - 1);
-        }
-
-        public int getTotalRounds() {
-            return roundHistory.size();
+        public List<String> getWinnerNames() {
+            return winnerNames;
         }
     }
 }
